--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/boutons_action.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/boutons_action.html.twig
@@ -8,6 +8,7 @@
         </button>
 
         <button type="submit" class="btn btn-success btn-valider-non-signer" data-action="{{ path("classeur_valider") }}">
+        {#<button type="submit" class="btn btn-success btn-valider" data-action="{{ path("classeur_valider") }}">#}
             <span class="glyphicon glyphicon-ok"></span>
             &nbsp;Valider
         </button>
@@ -28,11 +29,9 @@
 
     {% endif %}
 
-    <button type="submit" class="btn btn-danger" data-toggle="modal" data-target="#fenetreModal"
-            data-whatever="@mdo">
+    <button type="submit" class="btn btn-danger" data-toggle="modal" data-target="#fenetreModal" data-whatever="@mdo">
         <span class="glyphicon glyphicon-remove"></span>
         &nbsp;Refuser
-
     </button>
 
 
