Oubli de 2 fichiers à commiter

--- a/src/Sesile/ClasseurBundle/Resources/views/Formulaires/elpadre.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Formulaires/elpadre.html.twig
@@ -80,6 +80,10 @@ $("#visibilite").select2();
 <div>
     <br/>
     <input type="submit" name="Mybutton" id="Mybutton" class="btn btn-success" value="Envoyer">
+    <a href="{{ path('classeur') }}" class="btn btn-primary navbar-btn">
+        <span class="glyphicon glyphicon-share-alt"></span>
+        Retour à la liste des classeur
+    </a>
 </div>
 <script type="text/javascript">
     // jQuery plugin to prevent double submission of forms
