--- a/src/Sesile/DocumentBundle/Resources/views/Document/editForClasseur.html.twig
+++ b/src/Sesile/DocumentBundle/Resources/views/Document/editForClasseur.html.twig
@@ -75,7 +75,9 @@ var dropzone = new Dropzone("div#fichiers", { url: "{{ oneup_uploader_endpoint('
 
     createThumbnail: false{% if classeur.type.id == 2 %},
     maxFiles: 1,
-    dictMaxFilesExceeded: " vous ne pouvez télécharger qu'un seul fichier"
+    dictMaxFilesExceeded: "Dans le cas d'un classeur de type Hélios le dépôt d'un seul fichier par classeur est autorisé.",
+    acceptedFiles: ".xml",
+    dictInvalidFileType: "Attention, seuls les fichiers xml sont acceptés"
     {% endif %}
 
 });
