--- a/src/Sesile/DocumentBundle/Resources/views/Document/visu.html.twig
+++ b/src/Sesile/DocumentBundle/Resources/views/Document/visu.html.twig
@@ -9,7 +9,11 @@
         {% if isPJ is defined %}
         <div class="col-lg-12">
             <label>Ce fichier est un PES PJ ou un autre fichier non soumis à signature</label>
+            <a href="{{ app.request.headers.get('referer') }}" class="btn btn-primary pull-right"><span
+                        class="glyphicon glyphicon-share-alt"></span>&nbsp;&nbsp; Retour à la page
+                précédente</a>
         </div>
+
     </div>
     {% else %}
         <div class="col-lg-12">
