--- a/src/Sesile/UserBundle/Resources/views/Profile/edit_content.html.twig
+++ b/src/Sesile/UserBundle/Resources/views/Profile/edit_content.html.twig
@@ -63,7 +63,8 @@
 </div>
 <br/>
 
-<button class="btn btn-success" type="submit">{{ 'profile.edit.submit'|trans }}</button>
+<button class="btn btn-success" type="submit">Mettre à jour</button>
+
 {{ form_end(form) }}
 
 
