--- a/src/Sesile/DocumentBundle/Resources/views/Document/visubord.html.twig
+++ b/src/Sesile/DocumentBundle/Resources/views/Document/visubord.html.twig
@@ -94,6 +94,7 @@
         {% endfor %}
         </tbody>
     </table>
+</div>
     <div class="col-lg-12">
         <div class="modal fade col-lg-12" id="mymodal">
             <div class="modal-dialog " style="width: 100%;min-height:800px">
