--- a/src/Sesile/DocumentBundle/Resources/views/Document/new.html.twig
+++ b/src/Sesile/DocumentBundle/Resources/views/Document/new.html.twig
@@ -66,21 +66,20 @@
 
     dropzone.on("addedfile", function (file, serverfilename) {
         $('#Mybutton').attr('disabled', true);
-        $('.dz-remove').click(function () {
-            dropzone.removeFile(file);
-        });
-        /*  file.previewElement.find('.dz-remove').addEventListener("click", function () {
+
+        $('.dz-remove').on("click", function () {
 
 //            myDropzone.removeFile(file);
             dropzone.removeFile(file);
             $("#documentcontent").children("#" + file.idfilename).remove();
             console.log("#" + file.idfilename);
-         $('#Mybutton').attr('disabled', false);
-            if(dropzone.getAcceptedFiles().length == 0) {
+            $('#Mybutton').attr('disabled', false);
+            if (dropzone.getAcceptedFiles().length == 0) {
                 $('#Mybutton').attr('disabled', true);
             }
 
-         }); */
+        });
+
     });
 
 
@@ -88,10 +87,19 @@
 
     dropzone.on("success", function (file) {
         $('#Mybutton').attr('disabled', false);
-//        file.previewElement.addEventListener("click", function () {
-////            myDropzone.removeFile(file);
-//            dropzone.removeFile(file);
-//        });
+
+        $('.dz-remove').on("click", function () {
+
+//            myDropzone.removeFile(file);
+            dropzone.removeFile(file);
+            $("#documentcontent").children("#" + file.idfilename).remove();
+            console.log("#" + file.idfilename);
+            $('#Mybutton').attr('disabled', false);
+            if (dropzone.getAcceptedFiles().length == 0) {
+                $('#Mybutton').attr('disabled', true);
+            }
+
+        });
     });
 
 
