--- a/web/css/select2.css
+++ b/web/css/select2.css
@@ -420,7 +420,7 @@ disabled look for disabled choices in the results dropdown
 /* multiselect */
 
 .select2-container-multi .select2-choices {
-    height: auto !important;
+    /*height: auto !important;*/
     height: 1%;
     margin: 0;
     padding: 0;
@@ -600,6 +600,6 @@ disabled look for disabled choices in the results dropdown
 
 /* Personnalisation */
 .select2-container-multi .select2-choices {
-    max-height: 65px;
-    overflow-y: auto;
+    min-height: 95px;
+    height: 95px;
 }
